xiaobuadminweb/uat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    # nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    # nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/service-weight: ""
  name: xiaobu-adminweb
spec:
  rules:
  - host: uat-adminweb.xiaobu.vip
    http:
      paths:
      - backend:
          serviceName: uat-xiaobu-adminweb
          servicePort: 80
        path: /
  tls:
  - hosts:
    - uat-adminweb.xiaobu.vip
    secretName: xiaobu-adminweb
